# serializer version: 1
# name: test_dotted_expr_ok[dotted_column_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  column_expr
                    column_expr
                      ident	column1
                    ident	column2
                  ident	column3
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  column_expr
                    ident	column1
                  ident	column2
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  path_expression
                    path_expression
                      ident	`project1`
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  path_expression
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_function_call_ok[fcall_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
                    function_args
                      pos_arg
                        column_expr
                          literal
                            integer_literal	1
                      named_arg
                        ident	name2
                        column_expr
                          literal
                            integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
                    function_args
                      named_arg
                        ident	name1
                        column_expr
                          literal
                            integer_literal	1
                      named_arg
                        ident	name2
                        column_expr
                          literal
                            integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
                    function_args
                      named_arg
                        ident	name1
                        column_expr
                          literal
                            integer_literal	1
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
                    function_args
                      pos_arg
                        column_expr
                          literal
                            integer_literal	1
                      pos_arg
                        column_expr
                          literal
                            integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_none]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  function_call_expr
                    column_expr
                      ident	FUNC
                    function_args
                      pos_arg
                        column_expr
                          literal
                            integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  subscript_expr
                    column_expr
                      subscript_expr
                        column_expr
                          ident	column1
                        column_expr
                          literal
                            integer_literal	0
                    column_expr
                      literal
                        integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      literal
                        integer_literal	0
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_offset]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      function_call_expr
                        column_expr
                          ident	OFFSET
                        function_args
                          pos_arg
                            column_expr
                              literal
                                integer_literal	2
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_path_expr_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  subscript_expr
                    column_expr
                      subscript_expr
                        column_expr
                          column_expr
                            ident	column1
                          ident	column2
                        column_expr
                          literal
                            integer_literal	0
                    column_expr
                      literal
                        integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_string_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      literal
                        string_literal	'key1'
  
  '''
# ---
